<resources>
    <string name="app_name">OnePointMan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map">Map</string>
    <string name="facebook_app_id">137357800216709</string>
    <string name="descriptionApp">Il est temps de retrouver vos amis, en avant (Guingamp)!</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="title_activity_settings_group">SettingsGroup</string>
    <string name="title_activity_add_user_to_group">AddUserToGroup</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="addMemberToGroup">Ajouter un membre</string>
    <string name="deleteGroup">Supprimer le groupe</string>
    <string name="changeName">Changer le nom du groupe</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="title_activity_test_login_fb_from_server">TestLoginFbFromServer</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nommez_votre_point_de_rdv">Nommez votre point de RDV...</string>
    <string name="s_lectionnez_la_date_du_rdv">Sélectionnez la date du RDV...</string>
    <string name="cr_er_rdv">Créer RDV</string>
    <string name="annuler">annuler</string>
    <string name="s_lectionnez_l_heure_du_rdv">Sélectionnez l\'heure du RDV...</string>
    <string name="ajouter_un_point_de_rendez_vous">Ajouter un point de rendez-vous</string>

    <string name="startDrawing">Dessiner sur l\'écran</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Options</string>

</resources>
