<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/titleRdvDialog"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_un_point_de_rendez_vous"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/rdvDescription"
        android:hint="@string/nommez_votre_point_de_rdv"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleRdvDialog"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/rdvDate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:longClickable="false"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:hint="@string/s_lectionnez_la_date_du_rdv"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rdvDescription"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/rdvDescription"
        android:layout_marginLeft="1dp" />

    <EditText
        android:id="@+id/rdvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:clickable="true"
        android:textAlignment="center"
        android:hint="@string/s_lectionnez_l_heure_du_rdv"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintTop_toBottomOf="@+id/rdvDate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/rdvDate"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/rdvOkButton"
        android:text="@string/cr_er_rdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rdvHour"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/rdvDismissButton"
        android:text="@string/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/rdvHour"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>